CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (dngine)

SET(DNGINE_SOURCE_DIR ${dngine_SOURCE_DIR}/src)
SET(DNGINE_RELEASE_DIR ${dngine_SOURCE_DIR}/release)
SET(DNGINE_HEADERS_DIR ${DNGINE_SOURCE_DIR}/include)
SET(CMAKE_INSTALL_PREFIX ${DNGINE_RELEASE_DIR})
FILE(GLOB HEADERS ${DNGINE_HEADERS_DIR}/*.h)

INCLUDE_DIRECTORIES(${DNGINE_HEADERS_DIR})
FILE(GLOB DNGINE_SRC ${DNGINE_SOURCE_DIR}/*.cpp)
ADD_LIBRARY(dngine ${DNGINE_SRC})

ADD_EXECUTABLE(test_sprite test/sprite)
TARGET_LINK_LIBRARIES(test_sprite dngine)

SET(TEST_EXE
	${dngine_BINARY_DIR}/test_sprite
)

INSTALL(FILES ${HEADERS} DESTINATION include)
INSTALL(FILES ${TEST_EXE} DESTINATION test)
INSTALL(TARGETS dngine 
	ARCHIVE DESTINATION lib
)
