CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (dngine)

FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_image REQUIRED)

IF(NOT SDL_FOUND)
	MESSAGE(FATAL ERROR "SDL Not Found")
ENDIF(NOT SDL_FOUND)
SET(SDL_LIBS SDL SDL_image)

SET(DNGINE_SOURCE_DIR ${dngine_SOURCE_DIR}/src)
SET(DNGINE_RELEASE_DIR ${dngine_SOURCE_DIR}/release)
SET(DNGINE_HEADERS_DIR ${DNGINE_SOURCE_DIR}/include)
SET(CMAKE_INSTALL_PREFIX ${DNGINE_RELEASE_DIR})
FILE(GLOB HEADERS ${DNGINE_HEADERS_DIR}/*.h)

INCLUDE_DIRECTORIES(${DNGINE_HEADERS_DIR})
FILE(GLOB DNGINE_SRC ${DNGINE_SOURCE_DIR}/*.cpp)
ADD_LIBRARY(dngine ${DNGINE_SRC})

ADD_EXECUTABLE(test_sprite test/sprite)
TARGET_LINK_LIBRARIES(test_sprite dngine ${SDL_LIBS})

SET(TEST_EXE
	${dngine_BINARY_DIR}/test_sprite
)

INSTALL(FILES ${HEADERS} DESTINATION include)
INSTALL(FILES ${TEST_EXE} DESTINATION test)
INSTALL(TARGETS dngine 
	ARCHIVE DESTINATION lib
)
